logs/dag_id=dag_with_postgres_operator_v02/run_id=scheduled__2024-03-26T00:00:00+00:00/task_id=insert_postgres_table/attempt=1.log
[2024-03-28T02:24:13.192+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.insert_postgres_table scheduled__2024-03-26T00:00:00+00:00 [queued]>
[2024-03-28T02:24:13.198+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.insert_postgres_table scheduled__2024-03-26T00:00:00+00:00 [queued]>
[2024-03-28T02:24:13.198+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 6
[2024-03-28T02:24:13.207+0000] {taskinstance.py:2217} INFO - Executing <Task(PostgresOperator): insert_postgres_table> on 2024-03-26 00:00:00+00:00
[2024-03-28T02:24:13.211+0000] {standard_task_runner.py:60} INFO - Started process 1628 to run task
[2024-03-28T02:24:13.215+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v02', 'insert_postgres_table', 'scheduled__2024-03-26T00:00:00+00:00', '--job-id', '191', '--raw', '--subdir', 'DAGS_FOLDER/docker_with_postgres.py', '--cfg-path', '/tmp/tmptesu1zwy']
[2024-03-28T02:24:13.217+0000] {standard_task_runner.py:88} INFO - Job 191: Subtask insert_postgres_table
[2024-03-28T02:24:13.250+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_with_postgres_operator_v02.insert_postgres_table scheduled__2024-03-26T00:00:00+00:00 [running]> on host 6ba63bfba168
[2024-03-28T02:24:13.298+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='ethan_wu' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v02' AIRFLOW_CTX_TASK_ID='insert_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2024-03-26T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-03-26T00:00:00+00:00'
[2024-03-28T02:24:13.299+0000] {sql.py:276} INFO - Executing: 
            insert into table
             (dt, dag_id)
               with values (
            '2024-03-26', 'dag.dag_id'
            )
            
[2024-03-28T02:24:13.305+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-28T02:24:13.311+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-28T02:24:13.319+0000] {sql.py:457} INFO - Running statement: 
            insert into table
             (dt, dag_id)
               with values (
            '2024-03-26', 'dag.dag_id'
            )
            , parameters: None
[2024-03-28T02:24:13.321+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "table"
LINE 2:             insert into table
                                ^

[2024-03-28T02:24:13.328+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v02, task_id=insert_postgres_table, execution_date=20240326T000000, start_date=20240328T022413, end_date=20240328T022413
[2024-03-28T02:24:13.336+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 191 for task insert_postgres_table (syntax error at or near "table"
LINE 2:             insert into table
                                ^
; 1628)
[2024-03-28T02:24:13.347+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-28T02:24:13.361+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
